# libmars

./: .gitignore  README.md  chunker.c  chunker.h  compile_commands.json  meson.build
examples/: callback-sink.c  chunker.c  chunker.py  custom_src.c  meson.build
src/: callback-sink.c  callback-sink.h  chunker.c  chunker.h  main.c  meson.build
