exe = executable('chunker', ['chunker.c'],
  dependencies: mars_dep,
  include_directories: [mars_lib_inc],
  install : true
)

exe = executable('custom_src', ['custom_src.c'],
  dependencies: mars_dep,
  include_directories: [mars_lib_inc],
  install : true
)

exe = executable('callback-sink', ['callback-sink.c'],
  dependencies: mars_dep,
  include_directories: [mars_lib_inc],
  install : true
)
